# news_terminal

./: .gitignore  pyproject.toml
src/news_terminal/: _binance_data.py  _binance_trade.py  _news_websocket.py  config.py  terminal.css  terminal.py
src/news_terminal/news/: _twitter_monitor.py  _websocket.py  data_format.py
src/news_terminal/widgets/: _config.py  _label_item.py  _news_container.py  _position_manager.py  _price_tracker.py  _selection_display.py  _tree_news_container.py  _twitter_config.py
