[tool.poetry]
name = "news-terminal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "news_terminal", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.30.0"
websockets = "^10.4"
textual = {extras = ["dev"], version = "^0.11.1"}
rich-pixels = "^2.1.1"
unicorn-binance-websocket-api = "^1.42.0"
textual-autocomplete = "^2.0.1b0"
python-binance = "^1.0.17"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
